--- a/index.html
+++ b/index.html
@@ -1336,7 +1336,7 @@
             
             <div class="text-center mt-12">
                 <a href="#" class="inline-flex items-center px-6 py-3 bg-gradient-to-r from-limoraPink to-limoraViolet dark:from-limoraViolet dark:to-limoraPink text-white rounded-full font-semibold shadow-lg hover:shadow-xl transition duration-300">
-                    <i class="fas fa-store mr-2">НАШ ТЕЛЕГРАМ МАГАЗИН</i>НАШ ТЕЛЕГРАМ МАГАЗИН<a href="t.me/limoramagazine">LIMORASHOP<a/>
+                    <i class="fas fa-store mr-2">НАШ ТЕЛЕГРАМ МАГАЗИН<a href="t.me/limoramagazine" target="_blank" class="text-limoraPink dark:text-limoraViolet hover:underline">LIMORASHOP</a></i>
                 </a>
             </div>
         </div>
