--- a/index.html
+++ b/index.html
@@ -431,7 +431,9 @@
         }
     </style>
 </head>
-<body class="text-gray-800 dark:text-gray-200 min-h-screen flex flex-col">
+<meta name="google-site-verification" content="JfAAdyHpK7qdEJB9ZgAaqti2fNRb-ahI6lBy8tjgZe8" />
+    
+    <body class="text-gray-800 dark:text-gray-200 min-h-screen flex flex-col">
     <!-- Particle background -->
     <div id="particles" class="particles"></div>
     
